Fix alignment of entries
The line-height of 0.5 caused the baseline to differ between entries
with external link icons and text-only entries. Increasing to ≥0.8
prevents baseline differences with the current entries. Setting it to 1
for simplicity.

The top margin of 20px was used to add spacing between entries in the
same section, but it made the text appear below element boundaries which
seems weird when debugging. Setting a height of 2 em has the same visual
effect while keeping text within element boundaries.

--- a/static-site/components/footer/site-map.module.css
+++ b/static-site/components/footer/site-map.module.css
@@ -36,8 +36,8 @@
 .sectionEntry {
   font-size: var(--niceFontSize);
   font-weight: 400;
-  line-height: 0.5;
-  margin: 20px 0px 0px;
+  line-height: 1;
+  height: 2em;
   max-width: 640px;
   text-align: left;
 }
